--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,8 @@
 name: Build and Deploy Game Grid
+permissions:
+  contents: read
+  id-token: write
+  pages: write
 
 on:
   # Run every 8 hours
@@ -40,6 +44,8 @@ jobs:
       with:
         node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
+
 
     - name: Install dependencies
       run: npm ci
@@ -53,8 +59,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          cache/
-          node_modules/.cache
+          game-grid/cache/
+          game-grid/node_modules/.cache
         key: game-grid-cache-${{ hashFiles('**/package-lock.json') }}-${{ github.run_number }}
         restore-keys: |
           game-grid-cache-${{ hashFiles('**/package-lock.json') }}-
@@ -94,7 +100,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        path: './dist'
+        path: './game-grid/dist'
 
     - name: Deploy to GitHub Pages
       id: deployment
@@ -110,21 +116,99 @@ jobs:
       uses: actions/github-script@v7
       with:
         script: |
-          const caches = await github.rest.actions.getActionsCaches({
-            owner: context.repo.owner,
-            repo: context.repo.repo,
-          });
+          const KEEP_RECENT_COUNT = 5;
+          const MAX_CACHE_AGE_DAYS = 30;
+          const CACHE_PATTERN = 'game-grid-cache';
           
-          // Keep only the 5 most recent caches
-          const cachesToDelete = caches.data.actions_caches
-            .sort((a, b) => new Date(b.created_at) - new Date(a.created_at))
-            .slice(5);
+          // Get all caches with pagination
+          let allCaches = [];
+          let page = 1;
+          let hasMorePages = true;
           
-          for (const cache of cachesToDelete) {
-            console.log(`Deleting cache: ${cache.key}`);
-            await github.rest.actions.deleteActionsCacheById({
+          while (hasMorePages) {
+            const response = await github.rest.actions.getActionsCacheList({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              cache_id: cache.id,
+              per_page: 100,
+              page: page
             });
+            
+            allCaches = allCaches.concat(response.data.actions_caches);
+            hasMorePages = response.data.actions_caches.length === 100;
+            page++;
+          }
+          
+          // Filter to only our target caches
+          const targetCaches = allCaches.filter(cache => 
+            cache.key.includes(CACHE_PATTERN)
+          );
+          
+          console.log(`Found ${targetCaches.length} ${CACHE_PATTERN} caches`);
+          
+          if (targetCaches.length === 0) {
+            console.log('No target caches found for cleanup');
+            return;
+          }
+          
+          // Sort by creation date (newest first)
+          const sortedCaches = targetCaches.sort((a, b) => 
+            new Date(b.created_at) - new Date(a.created_at)
+          );
+          
+          // Find caches to delete based on two criteria:
+          // 1. Keep only the N most recent caches
+          // 2. Delete caches older than MAX_CACHE_AGE_DAYS
+          const now = new Date();
+          const cutoffDate = new Date(now.getTime() - (MAX_CACHE_AGE_DAYS * 24 * 60 * 60 * 1000));
+          
+          const cachesToDelete = sortedCaches.filter((cache, index) => {
+            const cacheDate = new Date(cache.created_at);
+            const tooOld = cacheDate < cutoffDate;
+            const exceedsLimit = index >= KEEP_RECENT_COUNT;
+            return tooOld || exceedsLimit;
+          });
+          
+          console.log(`Keeping ${Math.min(KEEP_RECENT_COUNT, sortedCaches.length)} most recent caches`);
+          console.log(`Deleting ${cachesToDelete.length} caches (old or excess)`);
+          
+          if (cachesToDelete.length === 0) {
+            console.log('No caches need cleanup');
+            return;
+          }
+          
+          // Calculate space to be freed
+          const totalSizeToDelete = cachesToDelete.reduce((sum, cache) => sum + cache.size_in_bytes, 0);
+          console.log(`Space to be freed: ${(totalSizeToDelete / 1024 / 1024).toFixed(2)} MB`);
+          
+          // Delete caches
+          let deletedCount = 0;
+          let errors = [];
+          
+          for (const cache of cachesToDelete) {
+            try {
+              const cacheAge = Math.floor((now - new Date(cache.created_at)) / (1000 * 60 * 60 * 24));
+              console.log(`Deleting cache: ${cache.key} (${cacheAge} days old, ${(cache.size_in_bytes / 1024 / 1024).toFixed(2)} MB)`);
+              
+              await github.rest.actions.deleteActionsCacheById({
+                owner: context.repo.owner,
+                repo: context.repo.repo,
+                cache_id: cache.id,
+              });
+              deletedCount++;
+            } catch (error) {
+              console.error(`Failed to delete cache ${cache.key}: ${error.message}`);
+              errors.push({ cache: cache.key, error: error.message });
+            }
+          }
+          
+          console.log(`\nCleanup Summary:`);
+          console.log(`- Successfully deleted: ${deletedCount} caches`);
+          console.log(`- Errors: ${errors.length}`);
+          console.log(`- Space freed: ${(totalSizeToDelete / 1024 / 1024).toFixed(2)} MB`);
+          console.log(`- Remaining caches: ${sortedCaches.length - deletedCount}`);
+          
+          if (errors.length > 0) {
+            console.log('\nErrors encountered:');
+            errors.forEach(err => console.log(`- ${err.cache}: ${err.error}`));
+            core.setFailed(`Failed to delete ${errors.length} caches`);
           }
