--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -6,6 +6,7 @@ on:
     paths:
       - 'game-grid/build/**'
       - 'game-grid/src/**'
+  workflow_dispatch:
 
 jobs:
   test-build:
@@ -23,6 +24,7 @@ jobs:
       with:
         node-version: '22'
         cache: 'npm'
+        cache-dependency-path: '**/package-lock.json'
 
     - name: Install dependencies
       run: npm ci
