--- a/game-grid/package.json
+++ b/game-grid/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "description": "",
   "scripts": {
-    "build": "tsx ./esbuild.ts",
-    "dev": "tsx build/index.ts && npx http-server dist -p 8080",
+    "build": "npm run clean && tsx ./esbuild.ts",
+    "dev": "npm run build && npx http-server dist -p 8080",
+    "watch": "tsx --watch ./esbuild.ts",
     "clean": "rimraf dist",
     "test": "npm run validate:build",
     "test:build": "npm run build && npm run validate:build",
@@ -14,6 +15,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "@tsconfig/node22": "^22.0.2",
     "@types/html-minifier-terser": "^7.0.2",
     "@types/node": "^22.16.4",
     "@types/node-fetch": "^2.6.12",
@@ -23,6 +25,7 @@
     "rimraf": "^6.0.1",
     "sharp": "^0.34.3",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "http-server": "^14.1.1"
   }
 }
