--- a/game-grid/package.json
+++ b/game-grid/package.json
@@ -25,7 +25,6 @@
     "rimraf": "^6.0.1",
     "sharp": "^0.34.3",
     "tsx": "^4.19.4",
-    "typescript": "^5.8.3",
-    "http-server": "^14.1.1"
+    "typescript": "^5.8.3"
   }
 }
