--- a/game-grid/package.json
+++ b/game-grid/package.json
@@ -22,7 +22,9 @@
     "@types/node": "^22.16.4",
     "@types/node-fetch": "^2.6.12",
     "esbuild": "^0.25.3",
+    "esbuild-plugin-copy": "^2.1.1",
     "html-minifier-terser": "^7.2.0",
+    "human-format": "^1.2.1",
     "node-fetch": "^3.3.2",
     "rimraf": "^6.0.1",
     "sharp": "^0.34.3",
